# ForAristarhTwo

./: CMakeLists.txt  ProjectAiP.vcxproj  ProjectAiP.vcxproj.filters  Source.txt  functions.cpp  functions.h  main.cpp  my_test.cpp
x64/Debug/: ProjectAiP.exe.recipe  vc143.idb
x64/Debug/ProjectAiP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProjectAiP.lastbuildstate  ProjectAiP.write.1u.tlog  link.command.1.tlog  link.secondary.1.tlog
